--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>제목없음</title>
+<title>제목</title>
 <html lang="ko">
 <link rel="stylesheet" th:href="@{/dist/css/detail.css}">
 <th:block th:replace="~{header :: setFragment(~{this::content})}">
