--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,7 +4,7 @@
 <th:block th:fragment="setFragment(content)">
 <head>
     <meta charset="UTF-8">
-    <title>제목없음</title>
+    <title>제목</title>
     <link rel="stylesheet" th:href="@{/dist/css/reset.css}">
 </head>
 <body>
