--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<th:block th:replace="~{header :: setFragment(~{this::content})}">
+    <th:block th:fragment="content">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +10,8 @@
         .container {
             display: flex;
             flex-wrap: wrap;
+            width: 1400px;
+            margin: 0 auto;
         }
         .movie {
             flex: 1 0 20%;
@@ -31,14 +35,53 @@
             width: 100%;
             height: 200px;
         }
+        .commentOutBox{
+            width: 1400px;
+            height: 50px;
+            /*background-color: antiquewhite;*/
+            line-height: 50px;
+            font-size: 1.2em;
+            margin: 10px 0 350px;
+            padding-left: 10px;
+        }
+        .commentOutBox p{
+            width: 1400px;
+            padding-left: 40px;
+        }
+        .commentInBox{
+
+            width: 1400px;
+            height: 180px;
+            display: flex;
+            justify-content: space-around;
+            padding: 10px;
+        }
+        .comment{
+            width: 420px;
+            height: 100%;
+            border-radius: 20px;
+            border: 1px solid gainsboro;
+        }
     </style>
 </head>
 <body>
 <div id="movieContainer" class="container">
-    <a th:href="@{/movie/detail}">디테일페이지 가기</a>
-    <a th:href="@{/user/myPage}">마이페이지 가기</a>
-</div>
+<!--    <a th:href="@{/movie/detail}">디테일페이지 가기</a>-->
+    <div class="commentOutBox">
+        <p class="commentTitle">지금 뜨는 코멘트</p>
+        <div class="commentInBox">
+            <div class="comment">
 
+            </div>
+            <div class="comment">
+
+            </div>
+            <div class="comment">
+
+            </div>
+        </div>
+    </div>
+</div>
 <script>
     const movieDbOptions = {
         method: 'GET',
@@ -121,4 +164,6 @@
     displayMovies();
 </script>
 </body>
+    </th:block>
+</th:block>
 </html>
