--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -15,6 +15,7 @@
             box-shadow: 1px 1px 2px #a09f9f;
             position: sticky;
             top: 0;
+            z-index: 1;
         }
         .outbox{
             width: 85%;
