--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -57,7 +57,6 @@
             <div>코멘트 내용</div>
         </div>
     </div>
-    <div class="section"></div>
     <div class="trend section">
         <div class="trend-analysis">
             <h2>닉네임님의 취향분석</h2>
@@ -67,9 +66,8 @@
             <button class="details-button">자세히보기</button>
         </div>
     </div>
-    <div class="section"></div>
     <div class="followed section">
-        <div class="follow-section">
+        <div class="follow-section section">
             <h3>팔로우한 배우</h3>
             <div class="profile-circles" id="actorProfiles">
                 <img src="https://via.placeholder.com/60" alt="Actor 1" class="profile-circle">
@@ -79,7 +77,7 @@
                 <img src="https://via.placeholder.com/60" alt="Actor 5" class="profile-circle">
             </div>
         </div>
-        <div class="follow-section">
+        <div class="follow-section section">
             <h3>팔로우한 감독</h3>
             <div class="profile-circles" id="directorProfiles">
                 <img src="https://via.placeholder.com/60" alt="Director 1" class="profile-circle">
