--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <div class="container">
+    <button id="token">Get Token</button>
+    <button id="session">Get Session</button>
     <div class="section profile">
         <div class="profile-image-container">
             <img src="https://via.placeholder.com/100" alt="Profile Picture" class="profile-image">
@@ -17,7 +19,7 @@
         <div class="profile-info">
             <div>닉네임</div>
             <div>이메일주소</div>
-            <div>팔로워와 팔로잉</div>
+            <div>팔로워 명 | 팔로잉 명</div>
         </div>
     </div>
     <div class="section calendar">
@@ -46,15 +48,15 @@
     <div class="countPrint">
         <div class="count-section">
             <div>x개</div>
-            <div>찜한작품 내용</div>
+            <div>찜한작품</div>
         </div>
         <div class="count-section">
             <div>x개</div>
-            <div>평가 내용</div>
+            <div>평가</div>
         </div>
         <div class="count-section">
             <div>x개</div>
-            <div>코멘트 내용</div>
+            <div>코멘트</div>
         </div>
     </div>
     <div class="trend section">
