디테일 js 더보기기능 완성

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <title>제목</title>
     <link rel="stylesheet" th:href="@{/dist/css/reset.css}">
+    <script th:src="@{/dist/js/header.js}"></script>
     <style>
         .contain-header{
             width: 100%;
@@ -118,6 +119,7 @@
 <div class="content-fluid">
     <th:block th:replace="${content}"></th:block>
 </div>
+
 </body>
 </th:block>
 </html>
