--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,6 +83,11 @@
     </div>
 </div>
 <script>
+
+    document.querySelector(".movie").addEventListener('click',()=>{
+        console.log("click");
+    })
+
     const movieDbOptions = {
         method: 'GET',
         headers: {
@@ -133,9 +138,10 @@
             console.log(movie)
             const movieDiv = document.createElement('div');
             movieDiv.classList.add('movie');
+            movieDiv.classList.add(${movie.id});
 
-            const posterPath = movie.poster_path ? `${imageBaseUrl}${movie.poster_path}` : '';
-            const backdropPath = movie.backdrop_path ? `${imageBaseUrl}${movie.backdrop_path}` : '';
+
+
 
             // const youtubeQuery = `${movie.original_title} ${new Date(movie.release_date).getFullYear()} movie trailer`;
             // const youtubeVideo = await fetchYouTubeVideo(youtubeQuery);
