정온 일반로그인 구현중..

--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -21,12 +21,12 @@
                     <span id="JoinSpan1" class="JoinSpan"></span>
                 </div>
                 <div class="JoinInputArea">
-                    <input type="text" name="pw" id="JoinPw" onchange="changeValue()">
+                    <input type="password" name="pw" id="JoinPw" onchange="changeValue()">
                     <label for="JoinPw" id="JoinPwLabel" class="JoinLabel">비밀번호</label>
                     <span id="JoinSpan2" class="JoinSpan"></span>
                 </div>
                 <div class="JoinInputArea">
-                    <input type="text" id="JoinCheckPw" onchange="changeValue()">
+                    <input type="password" id="JoinCheckPw" onchange="changeValue()">
                     <label for="JoinCheckPw" id="JoinCheckPwLabel" class="JoinLabel">비밀번호 확인</label>
                     <span id="JoinSpan3" class="JoinSpan"></span>
                 </div>
