--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="Login">
             <div class="LoginLogo"></div>
-            <form action="/login/form" method="post" class="LoginArea">
+            <form action="/user/login" method="post" class="LoginArea">
                 <div class="LoginInputArea">
                     <input type="text" name="email" id="LoginEmail" onchange="changeValue()">
                     <label for="LoginEmail" id="LoginEmailLabel" class="LoginLabel">이메일</label>
