modify profile image arrangement

--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -9,17 +9,15 @@
 </head>
 <body>
 <div class="container">
-    <button id="token">Get Token</button>
-    <button id="session">Get Session</button>
     <div class="section profile">
         <div class="profile-image-container">
             <img src="https://via.placeholder.com/100" alt="Profile Picture" class="profile-image">
             <button class="profile-image-button" onclick="changeProfileImage()">⚙️</button>
         </div>
         <div class="profile-info">
-            <div>닉네임</div>
-            <div>이메일주소</div>
-            <div>팔로워 명 | 팔로잉 명</div>
+            <div style="font-size: 18px">닉네임</div>
+            <div style="font-size: 10px; color: gray">이메일주소</div>
+            <div style="font-size: 12px;">팔로워 명 | 팔로잉 명</div>
         </div>
     </div>
     <div class="section calendar">
@@ -68,29 +66,7 @@
             <button class="details-button">자세히보기</button>
         </div>
     </div>
-    <div class="followed section">
-        <div class="follow-section section">
-            <h3>팔로우한 배우</h3>
-            <div class="profile-circles" id="actorProfiles">
-                <img src="https://via.placeholder.com/60" alt="Actor 1" class="profile-circle">
-                <img src="https://via.placeholder.com/60" alt="Actor 2" class="profile-circle">
-                <img src="https://via.placeholder.com/60" alt="Actor 3" class="profile-circle">
-                <img src="https://via.placeholder.com/60" alt="Actor 4" class="profile-circle">
-                <img src="https://via.placeholder.com/60" alt="Actor 5" class="profile-circle">
-            </div>
-        </div>
-        <div class="follow-section section">
-            <h3>팔로우한 감독</h3>
-            <div class="profile-circles" id="directorProfiles">
-                <img src="https://via.placeholder.com/60" alt="Director 1" class="profile-circle">
-                <img src="https://via.placeholder.com/60" alt="Director 2" class="profile-circle">
-                <img src="https://via.placeholder.com/60" alt="Director 3" class="profile-circle">
-                <img src="https://via.placeholder.com/60" alt="Director 4" class="profile-circle">
-                <img src="https://via.placeholder.com/60" alt="Director 5" class="profile-circle">
-            </div>
 
-        </div>
-    </div>
 
 </div>
 <script src="/dist/js/myPage.js"></script>
